deploy/node/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gucat-web-deployment
  namespace: gucat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gucat-web-node
  template:
    metadata:
      labels:
        app: gucat-web-node
    spec:
      containers:
      - name: gucat-web-node
        image: qblyxs/gucat-web-node:1.2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
---
