deploy/node/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gucat-web-service-node
  namespace: gucat
spec:
  type: ClusterIP
  selector:
    app: gucat-web-node
  ports:
    - name: http
      port: 4000
      targetPort: 4000
